реалізований клас контролер

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/customerdemo
 spring.datasource.username=maksym
 spring.datasource.password=maksym
-spring.jpa.database-platform=org.hibernate.PostgreSQLDIALECT
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
